--- a/components/Cabinet/DashBoard/Admin/Main/Events/Events.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Events/Events.module.scss
@@ -6,7 +6,7 @@
   gap: 24px;
   padding: 24px 16px;
   width: 100%;
-  background-color: $p_admin_main_bg;
+  background-color: #fdfdfd;
   min-height: calc(100vh - 65px);
   @media all and (width >= $min_tablet) {
     padding: 24px;
@@ -17,4 +17,19 @@
     overflow-y: auto;
     max-height: 100vh;
   }
+}
+
+.title_wrapper {
+  display: none;
+  @media all and (width >= $min_desktop) {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    padding: 24px;
+    border-bottom: 1px solid $form_border;
+  }
+}
+
+.title {
+  @include fontRegular(24px, 400, 24px, $third_text_color);
 }
