--- a/components/Cabinet/DashBoard/Admin/Main/Events/EventsHead/EventsHead.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Events/EventsHead/EventsHead.module.scss
@@ -4,10 +4,21 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  @media all and (width >= $min_tablet) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  @media all and (width >= $min_tablet) {
+    padding: 0 24px;
+  }
 }
 
 .title {
-  @include fontRegular(16px, 400, 22.5px, $third_text_color);
+  @include fontRegular(16px, 400, 22.5px, $p_active_button);
+  @media all and (width >= $min_tablet) {
+    font-size: 18px;
+  }
 }
 
 .actions_wrapper {
@@ -15,6 +26,9 @@
   justify-content: space-between;
   align-items: center;
   gap: 8px;
+  @media all and (width >= $min_tablet) {
+    gap: 16px;
+  }
 }
 
 .add_link {
@@ -29,5 +43,25 @@
   & > svg {
     width: 16px;
     height: 16px;
+  }
+  @media all and (width >= $min_tablet) {
+    order: 2;
+  }
+}
+
+.delete_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  width: 44px;
+  height: 44px;
+  border: 0.5px solid $p_btn_border;
+  & > svg {
+    width: 20px;
+    height: 20px;
+  }
+  @media all and (width >= $min_tablet) {
+    order: 3;
   }
 }
